[gd_scene load_steps=10 format=3 uid="uid://bu6r7xofr0t8e"]

[ext_resource type="Shader" uid="uid://bepjrssoapr53" path="res://scripts/shader/directional_sound_hud.gdshader" id="1_oye6p"]
[ext_resource type="Texture2D" uid="uid://uq1uagwh18vv" path="res://assets/placeholder/square.png" id="2_dov35"]
[ext_resource type="Script" uid="uid://dea37iyq710d5" path="res://scripts/player/enemy_noise_radar.gd" id="3_efj4u"]
[ext_resource type="PackedScene" uid="uid://bqvyhpds5gmf3" path="res://scenes/player/RadarItemIcon.tscn" id="4_llix5"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rl688"]
noise_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_vf56p"]
seamless = true
noise = SubResource("FastNoiseLite_rl688")

[sub_resource type="Curve" id="Curve_hsnhf"]
_limits = [0.05, 1.0, 0.0, 1.0]
_data = [Vector2(0, 0.05), 0.0, 0.0, 0, 0, Vector2(1, 0.05), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_c7dr8"]
curve = SubResource("Curve_hsnhf")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k25c2"]
resource_local_to_scene = true
shader = ExtResource("1_oye6p")
shader_parameter/inner_diameter = 0.35
shader_parameter/outer_diameter = 0.36
shader_parameter/noise = SubResource("NoiseTexture2D_vf56p")
shader_parameter/sounds = SubResource("CurveTexture_c7dr8")
shader_parameter/noise_strength = 0.2
shader_parameter/noise_speed = 0.1
shader_parameter/foreground = Vector4(1, 1, 1, 1)
shader_parameter/background = Vector4(0, 0, 0, 0)

[node name="EnemyNoiseRadar" type="Sprite2D"]
self_modulate = Color(1, 1, 1, 0.313726)
material = SubResource("ShaderMaterial_k25c2")
scale = Vector2(6, 6)
texture = ExtResource("2_dov35")
script = ExtResource("3_efj4u")
radius = 23.0
radar_item_scene = ExtResource("4_llix5")

[node name="RadarUpdateTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="IconHolder" type="Node2D" parent="."]

[node name="RadarItemIcon" parent="IconHolder" instance=ExtResource("4_llix5")]
position = Vector2(-23.1667, 0)
scale = Vector2(0.05, 0.05)

[connection signal="timeout" from="RadarUpdateTimer" to="." method="_on_radar_update_timer_timeout"]
